--- a/css/style.css
+++ b/css/style.css
@@ -1,57 +1,156 @@
-body {
-    padding: 0px;
-    margin: 0px;
-    ;
-}
-
-
-/* HEADER */
-
-.top_header {
-    background-color: #003478;
-}
-
-header nav {
-    margin-left: 345px;
-}
-
-.top_header nav li,
-a,
-span {
-    color: white;
-}
-
-.top_header nav ul .li_text {
-    margin-top: 5px;
-}
-
-.top_header nav ul .language {
-    margin: 8px 0 0 8px;
-}
-
-.top_header nav form {
-    margin-left: 36px;
-}
-
-.top_header nav div {
-    margin-left: 42px;
-}
-
-.main_header .logo {
-    margin-left: 210px;
-}
-
-.list-nav,
-.list-sub {
-    list-style: none;
-}
-
-.list-nav a,
-.list-sub a {
-    color: black;
-}
-
-header .slder {
-    width: 50%;
-    margin-left: 10px;
-}
+    body {
+        padding: 0px;
+        margin: 0px;
+    }
+    /* Responsive MENU  */
+    
+    .menu-toggle {
+        display: none;
+    }
+    
+    @media (max-width: 959px) {
+        header .top_header {
+            display: flex;
+        }
+        #nav_head.showing {
+            left: 0;
+        }
+        .menu-toggle {
+            display: block;
+            margin-left: 82px;
+            font-size: 30px;
+            /* color: white; */
+        }
+        .main_header ul {
+            width: 100%;
+            background-color: #003478;
+        }
+        .main_header ul li {
+            width: 100%;
+        }
+        .main_header ul li ul {
+            position: static;
+            display: block;
+            width: 100%;
+        }
+        .main_header ul li a {
+            color: white;
+        }
+    }
+    /* HEADER */
+    
+    .top_header {
+        background-color: #003478;
+        height: 50px;
+    }
+    
+    header nav {
+        margin: 0 20% 0 20%;
+    }
+    
+    .nav .nav-item {
+        font-family: Roboto, Arial, Helvetica, sans-serif;
+        font-size: 14.5px;
+        text-transform: uppercase;
+        font-weight: bold;
+    }
+    
+    .nav-link,
+    .btn,
+    .search,
+    .language-text {
+        font-family: Roboto, Arial, Helvetica, sans-serif;
+        font-size: 12.5px;
+    }
+    
+    .top_header nav li,
+    a,
+    span {
+        color: white;
+    }
+    
+    .top_header nav ul .li_text {
+        margin-top: 5px;
+    }
+    
+    .top_header nav ul .language {
+        margin: 5px 0 0 8px;
+    }
+    
+    .top_header nav form {
+        margin-left: 36px;
+    }
+    
+    .top_header nav div {
+        margin-left: 42px;
+    }
+    
+    .top_header a:hover {
+        color: orange;
+    }
+    
+    .main_header .logo {
+        margin-left: 210px;
+    }
+    
+    .list-sub {
+        list-style: none;
+    }
+    
+    .list-sub {
+        color: red;
+    }
+    
+    header .slide {
+        width: 90%;
+        margin: 0 5% 0 5%;
+        /* border: 1px solid red; */
+    }
+    
+    #nav_head {
+        border-bottom: 1px solid #1a4884;
+        /* background-color: blue; */
+        margin: 10px 82px;
+    }
+    
+    #nav_head ul li {
+        margin: 0px 10px;
+    }
+    
+    .nav ul a {
+        color: black;
+    }
+    
+    nav ul li ul {
+        display: none;
+    }
+    
+    nav ul li a:hover {
+        text-decoration: none;
+        color: white;
+        background-color: #1a4884;
+    }
+    
+    #nav_head ul li:hover ul {
+        background-color: #1a4884;
+        display: block;
+        position: absolute;
+        z-index: 2;
+    }
+    
+    nav ul li:hover ul a {
+        color: white;
+    }
+    
+    nav ul li:hover ul a:hover {
+        background-color: darkgrey;
+    }
+    
+    .footer_header {
+        /* position: absolute; */
+        z-index: 1;
+    }
+    
+    .footer_header img {
+        height: 450px;
+    }
